[gd_scene load_steps=4 format=3 uid="uid://bleujjyqm4j4h"]

[ext_resource type="Script" path="res://LP4-1.gd" id="1_7m5re"]

[sub_resource type="LabelSettings" id="LabelSettings_858aj"]
font_size = 50

[sub_resource type="Theme" id="Theme_nanc2"]

[node name="LP4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m5re")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 48.0
offset_right = 655.0
offset_bottom = 160.0
text = "Enter # of copies to print:"
label_settings = SubResource("LabelSettings_858aj")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 208.0
offset_right = 888.0
offset_bottom = 391.0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.09
anchor_bottom = 0.148
offset_left = 768.0
offset_top = 40.0
offset_right = 984.32
offset_bottom = 47.096

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 352.0
offset_bottom = 576.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
offset_left = 432.0
offset_top = 448.0
offset_right = 720.0
offset_bottom = 576.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
offset_left = 800.0
offset_top = 448.0
offset_right = 1088.0
offset_bottom = 576.0
theme = SubResource("Theme_nanc2")
text = "Close"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
